--- a/resources/css/sass/pages/_player.scss
+++ b/resources/css/sass/pages/_player.scss
@@ -268,7 +268,7 @@
                 line-height: 1;
                 margin: 0;
                 padding: 0;
-                font-size: 50px;
+                font-size: 35px;
 
 
                 &.strict-2 {
