--- a/resources/css/sass/pages/_ranklist.scss
+++ b/resources/css/sass/pages/_ranklist.scss
@@ -76,8 +76,8 @@
   .place{
     position : relative;
     .diamond{
-      width:35px;
-      height: 35px;
+      width:52px;
+      height: 52px;
       border-width: 3px !important;
       display: grid;
       place-items: center;
@@ -85,6 +85,7 @@
     }
       .number{
         font-weight: bold;
+        font-size: 25px;
         line-height: 1;
 
         &.category-1{
@@ -192,7 +193,7 @@
       justify-content: center;
     }
     .rank {
-      width: 40px;
+      width: 60px;
       aspect-ratio: 1 / 1;
       border-radius: 100px;
       display: grid;
@@ -266,7 +267,7 @@
       }
 
       .rank {
-        width: 55px;
+        width: 70px;
         font-size: 25px;
         padding-left: 1px;
         padding-top: 4px;
@@ -304,13 +305,13 @@
       .place{
         margin-bottom: 5px;
         .diamond{
-          height: 50px;
-          width: 50px;
+          height: 63px;
+          width: 63px;
         }
         .number{
           top: 50%;
           left: 50%;
-          font-size: 25px;
+          font-size: 30px;
           font-weight: normal;
         }
       }
